# BST

./: CMakeLists.txt
src/: CMakeLists.txt  bst.c  bst.h
tests/: CMakeLists.txt  tests.c
